<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="empty"></string>
    
    <string name="username_hint">Username</string>
    <string name="app_name">Jobmine Plus Mobile</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="applications_title">Applications</string>
    <string name="shortlist_title">Shortlist</string>
    <string name="interviews_title">Interviews</string>
    <string name="settings_title">Settings</string>
    <string name="jobsearch_title">Job Search</string>
    
    <string name="login_tou_text">"By logging in, you accept the "</string>
    <string name="login_tou_text_click"><u>terms of use</u></string>
    <string name="login_tou_title">Terms of Use</string>
    <string name="login_tou_message"><b>These Terms of Use are effective on June 2, 2013.</b>\n\nBy using this application, I (Matthew Ng) have no liability for what job you may get. This application is mainly used to view your jobs (applications, short list and interviews). <b>These Terms of Use affect your legal rights and obligations. If you do not agree to be bound by all of these Terms of Use, do not access or use the Service.</b>\n\nUniversity of Waterloo owns the content of the JobMine website. I have used the content to display it in this application. The content in this application is not altered to negativity affect the user. \n\n<b>Terms</b>\n<b>1.</b>You must be a student of the University of Waterloo to use this Service.\n<b>2.</b>Matthew Ng and this application is not liable for your decisions or outcome of JobMine.\n<b>3.</b>Logging crash reports are enabled by default and cannot be opted out. The information in the crash reports will not be used in anyway to harm users. The reports are only used to fix errors in the application.\n<b>4.</b>You may not use the Service for any illegal or unauthorized purpose. You must agree to all laws and regulations of Canada.</string>
    
    <string name="settings_inter_note_cate_title">Interviews Notification</string>
    <string name="settings_inter_note_summary">Periodically check if there are new interviews</string>
    <string name="settings_inter_note_title">Notify on new interviews</string>
    
    <string name="settings_wifi_only_summary">Check interviews only on wifi</string>
    <string name="settings_wifi_only_title">Check only on Wifi</string>
    
    <string name="settings_check_freq_summary">The time checks interviews periodically</string>
    <string name="settings_check_freq_title">Check frequency</string> 
    <string name="settings_check_freq_default_value">10</string>

    <string name="settings_login_cate_title">Login</string>
    <string name="settings_auto_login_summary">Check to auto log in on startup</string>
    <string name="settings_auto_login_title">Auto login</string>

    <string name="settings_crash_report_cate_title">Crash Reports</string>
    <string name="settings_crash_report_data_summary">Allow mobile data to send crash reports.</string>
    <string name="settings_crash_report_data_title">Allow data to send</string>

    <string name="action_bar_search">Search</string>
    <string name="action_bar_sort">Sort</string>
    <string name="action_bar_online">Online</string>
    <string name="menuitem_logout">Logout</string>
    <string name="menuitem_localhost">Use localhost</string>
    <string name="menuitem_online">Use Online</string>
    <string name="menuitem_about">About</string>
    <string name="menuitem_no_ads">Remove Ads</string>

    <string name="job_details_grades">Grades are required</string>
    <string name="job_details_loc_title">Location of Job</string>
    <string name="job_details_dates_title">Apply Between</string>
    <string name="job_details_wrksppt_title">Work Term Support</string>
    <string name="job_details_cecs_title">CECS Field Co-ordinator</string>
    <string name="job_details_disc_title">Disciplines</string>
    <string name="job_details_lvls_title">Levels</string>

    <!-- Job Seach -->
    <string name="job_level_junior">Junior</string>
    <string name="job_level_intermediate">Intermediate</string>
    <string name="job_level_senior">Senior</string>
    <string name="job_level_bachelor">Bachelor</string>
    <string name="job_level_masters">Masters</string>
    <string name="job_level_phD">Ph.D.</string>
    <string name="job_search_disciplines_title">Disciplines</string>
    <string name="job_search_location_title">Location</string>
    <string name="job_search_term_title">Co-op Term*</string>
    <string name="job_search_filter_title">Job Search Filter*</string>
    <string name="job_search_type_title">Job Type*</string>
    <string name="job_search_employer_title">Employer\'s Name</string>
    <string name="job_search_title_title">Job Title</string>
    <string name="job_search_level_title">Job Level</string>

    <string name="job_search_type_unauth">You are not authorised to search by that job type.</string>

    <!-- Tutorial -->
    <string name="tutorial_sorting_text">Click here to sort specific headers</string>
    <string name="tutorial_online_text">View jobs\nonline or offline</string>
    <string name="tutorial_logout_text">You can select logout\nfrom the menu</string>
    <string name="tutorial_end">Touch to close</string>
    
    <string name="bullet_point">&#8226;</string>

    <!-- Preference Keys -->
    <string name="pref_seen_home_tutorial">settingsSeenTutorial</string>
    <string name="pref_seen_sorting_tutorial">settingsSeenSortingTutorial</string>
    
    <!-- About Dialog -->
    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">Jobmine Plus Mobile was created by Matthew Ng.\n\nJobMine rights are owned by the University of Waterloo and this application is not affiliated with them.</string>

    <!-- Promotion ad dialog -->
    <string name="promo_ad_dialog_title">Tired of Ads?</string>
    <string name="promo_ad_dialog_message">Thanks for using the app I have developed!\n\nIf you appreciate my work or just hate ads then you can donate by purchasing the no ad version.</string>
    <string name="promo_package_name">com.jobmineplus.mobilepro</string>
    <string name="no_thank_you">No Thanks</string>
    <string name="sure">Sure</string>

    <!-- SSL -->
    <string name="ssl_certificate_password">jobmineplus</string>
</resources>