<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        style="@style/wrap"
        android:layout_alignParentRight="true"
        android:layout_margin="15dp"
        android:orientation="vertical"
        >
	    <ImageView
           style="@style/wrap"
	        android:layout_gravity="top|right"
	        android:contentDescription="@string/empty"
	        android:src="@drawable/white_arrow_up" 
	        />
	    <TextView
	        style="@style/wrap"
	        android:textColor="#FFFFFF"
	        android:textSize="20sp"
	        android:gravity="right"
	        android:text="@string/tutorial_online_text" 
	        />
    </LinearLayout>
    <TextView 
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:text="@string/tutorial_end"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="vertical"
        >
	    <TextView
            style="@style/wrap"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:text="@string/tutorial_logout_text" 
            />
        <ImageView
           style="@style/wrap"
           android:layout_marginLeft="40dp"
           android:layout_gravity="left"
           android:contentDescription="@string/empty"
           android:src="@drawable/white_arrow_down" 
           />
    </LinearLayout>
</RelativeLayout>
        